# protocol

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  buf.gen.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: buf-ci.yaml  publish-npm.yml  publish-nuget.yml  publish-pypi.yaml  publish-pypi.yml
csharp/: Action.cs  ActionInfo.cs  Actor.cs  ActorAssignment.cs  ActorConstraint.cs  ActorSkill.cs  Agent.cs  Anchor.cs  ArConfig.cs  ArConfigBinding.cs  AssemblyNode.cs  AssetDefinition.cs  AssetInstance.cs  Assets.cs  AuthoringConfig.cs  AuthoringMarker.cs  CapabilityProfile.cs  CellDefinition.cs  Clone.cs  Color.cs  Common.cs  ConfigLoad.cs  ConfigResolve.cs  ContainerDefinition.cs  ContainerInstance.cs  CustomProperties.cs  Device.cs  DisplayText.cs  Enums.cs  Environment.cs  Events.cs  Execution.cs  ExecutionEvidence.cs  ExternalReferences.cs  Feedback.cs  FeedbackInfo.cs  Fixture.cs  Function.cs  FunctionInfo.cs  GenerationRequests.cs  (+82 more)
documentation/: README.md
lib/ar/v1/: action_info_pb.ts  action_pb.ts  agent_pb.d.ts  agent_pb.js  ar_config_binding_pb.ts  ar_config_pb.ts  assets_pb.ts  authoring_config_pb.d.ts  authoring_config_pb.js  authoring_marker_pb.d.ts  authoring_marker_pb.js  config_load_pb.ts  config_resolve_pb.ts  device_pb.ts  environment_pb.d.ts  (+21 more)
proto/ar/: README.md
proto/assembly/: README.md
proto/common/: color.proto
proto/geometry/: point.proto  pose.proto  quad.proto  vector3.proto
proto/plm/: README.md
proto/runtime/: README.md
proto/service/: status.proto
(+645 files in other folders)
