[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cobotar"
version = "0.3.0"
dependencies = [

]
requires-python = ">=3.8"
authors = [
    {name = "Rasmus Lunding", email = "rsl@cs.au.dk"},
]
maintainers = [
    {name = "Rasmus Lunding", email = "rsl@cs.au.dk"}
]
description = "Protocol and more for the cobotar project"
readme = "README.md"
keywords = ["cobot", "ar", "protocol"]
classifiers = [
    "Programming Language :: Python"
]

[project.optional-dependencies]


[project.urls]
Homepage = "https://cobotar.org"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
